styles.css
/* ... */
.hsuforum-parent-post-link {
border-radius: 50%;
background-color: orange;
display: inline-block;
width: 1.5em;
height:1.5em;
margin-right:2%;
text-align:center;
color: white !important;
}

/* user image secions */
.hsuforum-thread-author,
.hsuforum-post-figure{
    text-align:center;
}
.hsuforum-thread-author .userpicture,
.hsuforum-post-figure .userpicture{
    width:75px;
    max-width:100%;
    height:auto;
    border-radius:50%;
    margin:0 auto;
    display:block;
}
.hsuforum-thread-participants .userpicture,
.hsuforum-thread-replies-meta .userpicture,
.hsuforum-post-byline .userpicture{
    display: inline-block;
    width: 32px;
    max-width: 32px;
    height: auto;
    margin:0.3em 1.18%;
    border-radius:50%;
    vertical-align: middle;
}



/* unread posts flag */
.hsuforum-unreadcount {
    background-color: #FFA500;
    color: #FFF !important;
    display:inline-block;
    text-align:center;
    padding:0 2.36%;
    margin:0.3em 1.18%;
    font-size:small;
    line-height:2;
    border-radius:3px;
}
.hsuforum-post .hsuforum-unreadcount {
    display:inline-block;

}

.post-word-count{
    font-size:small;
    text-align:right;
    font-style:oblique;
}


.hsuforum-thread-content .attachments {
    margin-top: 1em;
}

.hsuforum-tools{
    font-family:'Roboto','Open sans','Helvetica Neue', Helvetica, Arial, sans-serif;
    font-weight:normal;
    padding-bottom:1em;
}
.hsuforum-tools .hsuforum-reply-link{
    margin-left:0;
}
.hsuforum-tools a:not(.btn) {
    padding: 0 0.2em;
}





/* -------------------------
ACTIONS
-------------------------*/
.hsuforum-toggle {
    display:inline-block;
    border-radius:0;
    padding:0 0.2em;
    color:white !important;
    font-family:"Roboto",'Helvetica Neue', Helvetica, Arial, sans-serif;
}
.hsuforum-toggle .svg-icon {
    fill:#ddd;
    width: 1.3em;
    height: 1.3em;
    display:inline-block;
}

.hsuforum-toggle:hover,
.hsuforum-toggle:focus .svg-icon {
    -webkit-transform: scale(1.06);
    -ms-transform: scale(1.06);
    transform: scale(1.06);
    -webkit-transition: -webkit-transform .3s;
    transition: transform .3s;
    background-color:#eee;
}

.hsuforum-toggle-subscribe[aria-pressed="false"] .svg-icon,
.hsuforum-toggle-substantive[aria-pressed="false"] .svg-icon,
.hsuforum-toggle-bookmark[aria-pressed="false"] .svg-icon {
     fill: #ddd;
}

.hsuforum-toggle-subscribe[aria-pressed="true"] .svg-icon {
    fill: #ffac0d;
}

.hsuforum-toggle-substantive[aria-pressed="true"] .svg-icon {
    fill:#5fa9dd;
}

.hsuforum-toggle-bookmark[aria-pressed="true"] .svg-icon {
    fill:#f05454;
}

/* -------------------------
FUN WITH FORMS
-------------------------*/

.hsuforum-reply-wrapper {
    clear: both;
}


.hsuforum-form fieldset{
    margin: 0 auto;
}

.hsuforum-form legend {
    margin: 1em 0;
    font-size: 1.25em;
}

.hsuforum-form label {
    display: block;
    margin-bottom: 0.5em;
}

.hsuforum-form .fitem_fdate_time_selector label + span.helptooltip {
    display: none;
}

.hsuforum-form .hsuforum-textarea {
    cursor: text;
    -moz-appearance: textfield-multiline;
    -webkit-appearance: textarea;
    border: 1px solid #999;
    padding: 0.5em 0.5em 0em 0.5em;
    font-size: 99%;
    min-height: 8em;
    overflow: auto;
    resize: both;
    background-color:white;
}

.hsuforum-post-body input[type=file],
.hsuforum-reply-wrapper .editor_atto_wrap input[type=file] {
    line-height: 1;
    font-weight: normal;
}


.hsuforum-form .hidden {
    display: none;
}

.hsuforum-form div[contenteditable=true]:empty:not(:focus):before {
    content: attr(data-placeholder);
    color: #999;
}


.hsuforum-form button {
    clear: both;
}

.hsuforum-use-advanced {
    clear: both;
    float: right;
}

.hsuforum-use-advanced.btn {
    padding-right: 0;
}

.hsuforum-validation-errors.notifyproblem {
    text-align: left;
}
.path-mod-hsuforum .discussioncontrols {
    text-align: center;
}

.editor_atto_content_wrap, #editor-target-container_tbl {
    margin-bottom: 0.5em;
}
/* ... */

